--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -47,7 +47,10 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.53</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+            </dependency>
 
         </dependencies>
 
