--- a/poseidon-system/src/main/resources/application.properties
+++ b/poseidon-system/src/main/resources/application.properties
@@ -19,5 +19,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.redis.host=119.23.75.58
 spring.redis.port=6379
 spring.redis.password=poseidon
-
 #logging.level.root=debug
+#spring.resources.static-locations=/test/
+#pring.mvc.static-path-pattern=/resources/**
