--- a/poseidon-system/pom.xml
+++ b/poseidon-system/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>poseidon-core</artifactId>
             <version> 0.1.0.BUILD</version>
         </dependency>
+        <dependency>
+            <groupId>com.muggle.poseidon</groupId>
+            <artifactId>poseidon-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <!--########-->
         <dependency>
