--- a/poseidon-system/pom.xml
+++ b/poseidon-system/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.muggle.poseidon</groupId>
         <artifactId>poseidon-parent</artifactId>
-        <version> 0.1.0.BUILD</version>
+        <version>0.1.0.BUILD</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.muggle.poseidon</groupId>
@@ -16,14 +16,14 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <redis.version> 2.0.9.RELEASE</redis.version>
+        <redis.version>2.0.9.RELEASE</redis.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.muggle.poseidon</groupId>
             <artifactId>poseidon-core</artifactId>
-            <version> 0.1.0.BUILD</version>
+            <version>0.1.0.BUILD</version>
         </dependency>
         <dependency>
             <groupId>com.muggle.poseidon</groupId>
@@ -45,9 +45,9 @@
 
 
         <dependency>
-             <groupId>org.springframework.boot</groupId>
-             <artifactId>spring-boot-starter-security</artifactId>
-         </dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!--########-->
 
         <dependency>
@@ -66,26 +66,40 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version> 1.1.12</version>
+            <version>1.1.12</version>
         </dependency>
 
 
-
-
-         <dependency>
-             <groupId>org.springframework.security</groupId>
-             <artifactId>spring-security-test</artifactId>
-             <scope>test</scope>
-         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                    <include>**/*.html</include>
+                    <include>**/*.jsp</include>
+                    <include>**/*.txt</include>
+                </includes>
+                <!--<filtering>false</filtering>-->
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+
+                </includes>
+                <!--<filtering>false</filtering>-->
+            </resource>
+        </resources>
     </build>
 
 </project>
