--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -41,7 +41,10 @@
                 <artifactId>lombok</artifactId>
                 <optional>true</optional>
             </dependency>
-
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
