--- a/poseidon-system/src/main/resources/application.properties
+++ b/poseidon-system/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.redis.host=119.23.75.58
 spring.redis.port=6379
 spring.redis.password=poseidon
-#logging.level.root=debug
+logging.level.root=info
 #spring.resources.static-locations=/test/
 #pring.mvc.static-path-pattern=/resources/**
+#logging.config=logback-test.xml
+lock.time=300
