--- a/poseidon-system/src/main/resources/application.properties
+++ b/poseidon-system/src/main/resources/application.properties
@@ -23,3 +23,8 @@ logging.level.root=info
 #pring.mvc.static-path-pattern=/resources/**
 #logging.config=logback-test.xml
 lock.time=300
+
+poseidon.security.processes=/sign_in
+poseidon.security.username=username
+poseidon.security.password=password
+poseidon.security.page=/login_page
