--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -55,6 +55,10 @@
                 <artifactId>spring-boot-starter-aop</artifactId>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-mail</artifactId>
+            </dependency>
         </dependencies>
 
     <build>
