--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -14,6 +14,8 @@
     <description>波塞冬</description>
     <properties>
         <java.version>1.8</java.version>
+        <fastjson.version>1.2.53</fastjson.version>
+        <druid.vrsion>1.1.12</druid.vrsion>
     </properties>
     <modules>
         <module>../poseidon-system</module>
@@ -48,7 +50,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>1.2.53</version>
+                <version>${fastjson.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -58,6 +60,30 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-mail</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-test</artifactId>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.vrsion}</version>
             </dependency>
         </dependencies>
 
