--- a/poseidon-web/pom.xml
+++ b/poseidon-web/pom.xml
@@ -3,21 +3,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
+        <groupId>com.muggle.poseidon</groupId>
+        <artifactId>poseidon-parent</artifactId>
+        <version>0.1.0.BUILD</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.muggle.poseidon</groupId>
     <artifactId>poseidon-web</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0.BUILD</version>
     <name>poseidon-web</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
     </properties>
-
+    <modules>
+        <module>poseidon-web-doc</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
