多验证方式

--- a/poseidon-center/src/main/resources/application-test.properties
+++ b/poseidon-center/src/main/resources/application-test.properties
@@ -39,4 +39,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
-lance.mail.sender=接收方xxx@qq.com
+email.server=发送人名称
