--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -16,6 +16,7 @@
         <java.version>1.8</java.version>
         <fastjson.version>1.2.53</fastjson.version>
         <druid.vrsion>1.1.12</druid.vrsion>
+        <poseidon.version>0.1.0.BUILD</poseidon.version>
     </properties>
     <modules>
         <module>../poseidon-system</module>
@@ -86,6 +87,20 @@
                 <version>${druid.vrsion}</version>
             </dependency>
         </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.muggle.poseidon</groupId>
+                <artifactId>poseidon-common</artifactId>
+                <version>${poseidon.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.muggle.poseidon</groupId>
+                <artifactId>poseidon-core</artifactId>
+                <version>${poseidon.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <resources>
