--- a/poseidon-common/pom.xml
+++ b/poseidon-common/pom.xml
@@ -6,7 +6,8 @@
         <groupId>com.muggle.poseidon</groupId>
         <artifactId>poseidon-parent</artifactId>
         <version> 0.1.0.BUILD</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../poseidon-parent/pom.xml</relativePath>
+        <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
     <groupId>com.muggle.poseidon</groupId>
     <artifactId>poseidon-common</artifactId>
@@ -27,13 +28,13 @@
         </dependency>
     </dependencies>
 
-    <build>
+   <!-- <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 
 </project>
