--- a/poseidon-center/pom.xml
+++ b/poseidon-center/pom.xml
@@ -6,7 +6,8 @@
         <groupId>com.muggle.poseidon</groupId>
         <artifactId>poseidon-parent</artifactId>
         <version>0.1.0.BUILD</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../poseidon-parent/pom.xml</relativePath>
+        <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
     <groupId>com.muggle.poseidon</groupId>
     <artifactId>poseidon-center</artifactId>
@@ -48,6 +49,7 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName><!--打jar包去掉版本号-->
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -75,7 +77,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkCount>6</forkCount>
+                    <useSystemClassLoader>true</useSystemClassLoader>
+                    <useManifestOnlyJar>false</useManifestOnlyJar>
+                    <reuseForks>false</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
 
 </project>
