--- a/poseidon-core/pom.xml
+++ b/poseidon-core/pom.xml
@@ -6,7 +6,8 @@
         <groupId>com.muggle.poseidon</groupId>
         <artifactId>poseidon-parent</artifactId>
         <version> 0.1.0.BUILD</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../poseidon-parent/pom.xml</relativePath>
+        <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
     <groupId>com.muggle.poseidon</groupId>
     <artifactId>poseidon-core</artifactId>
