--- a/poseidon-center/src/main/resources/application-test.properties
+++ b/poseidon-center/src/main/resources/application-test.properties
@@ -1,9 +1,9 @@
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://xxxx/poseidon?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
-spring.datasource.username = xxx
-spring.datasource.password = xxx
+spring.datasource.url = jdbc:mysql://119.23.75.58:3306/poseidon?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+spring.datasource.username = root
+spring.datasource.password = root
 spring.datasource.max-active=20
 spring.datasource.max-idle=8
 spring.datasource.min-idle=8
@@ -15,15 +15,15 @@ spring.jpa.show-sql = true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 
-spring.redis.host=xxxxx
+spring.redis.host=119.23.75.58
 spring.redis.port=6379
-spring.redis.password=xxx
+spring.redis.password=poseidon
 logging.level.root=info
 #spring.resources.static-locations=/test/
 #pring.mvc.static-path-pattern=/resources/**
 #logging.config=logback-test.xml
 lock.time=300
-  
+
 poseidon.security.processes=/sign_in
 poseidon.security.username=username
 poseidon.security.password=password
@@ -32,11 +32,15 @@ poseidon.security.page=/login_page
 
 # JavaMailSender 邮件发送的配置
 spring.mail.host=smtp.qq.com
-spring.mail.username=xxx@qq.com
+spring.mail.username=1977339740@qq.com
 #QQ邮箱的授权码
-spring.mail.password=xxx
+spring.mail.password=upndsohrjrnvdgea
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
-email.server=发送人名称
+email.server=1977339740@qq.com(波塞冬)
+
+
+#upndsohrjrnvdgea
+#"test620420@163.com", "qqq111"
