--- a/poseidon-web/poseidon-web-doc/pom.xml
+++ b/poseidon-web/poseidon-web-doc/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.muggle.poseidon</groupId>
     <artifactId>poseidon-web-doc</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0.BUILD</version>
     <name>poseidon-web-doc</name>
     <description>Demo project for Spring Boot</description>
 
@@ -19,16 +19,7 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <!--<build>
