黑名单功能

--- a/poseidon-center/src/main/resources/application-test.properties
+++ b/poseidon-center/src/main/resources/application-test.properties
@@ -39,4 +39,21 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
-email.server=发送人名称
+email.server=发送方邮箱(自定义昵称)
+
+#如果上阿里云 需要这样配置
+
+##email
+#spring.mail.host=
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.ssl.trust=
+##SSL证书Socket工厂
+#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+##使用SMTPS协议465端口
+#spring.mail.properties.mail.smtp.socketFactory.port=465
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.default-encoding=UTF-8
+#email.server=
