--- a/poseidon-center/src/main/resources/application-test.properties
+++ b/poseidon-center/src/main/resources/application-test.properties
@@ -47,7 +47,7 @@ email.server=发送方邮箱(自定义昵称)
 #spring.mail.host=
 #spring.mail.username=
 #spring.mail.password=
-#spring.mail.properties.mail.smtp.ssl.trust=
+#spring.mail.properties.mail.smtp.ssl.trust=smtp.qq.com
 ##SSL证书Socket工厂
 #spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 ##使用SMTPS协议465端口
