--- a/poseidon-center/src/main/resources/application.properties
+++ b/poseidon-center/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.profiles.active=local
 admin.email=1977339740@qq.com
 poseidon.security.logout=/logout
+upload.file=F:/gbg
+#upload.file=/usr/share/nginx/html/img
