--- a/poseidon-web/pom.xml
+++ b/poseidon-web/pom.xml
@@ -19,9 +19,17 @@
     </properties>
     <modules>
         <module>poseidon-web-doc</module>
+        <module>poseidon-web-upload</module>
     </modules>
     <dependencies>
-
+        <dependency>
+            <groupId>com.muggle.poseidon</groupId>
+            <artifactId>poseidon-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.muggle.poseidon</groupId>
+            <artifactId>poseidon-common</artifactId>
+        </dependency>
     </dependencies>
 <!--
     <build>
