--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -87,6 +87,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
