--- a/poseidon-center/pom.xml
+++ b/poseidon-center/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>poseidon-web-doc</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.muggle.poseidon</groupId>
+            <artifactId>poseidon-request</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
