--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -30,7 +30,11 @@
         <fastjson.version>1.2.53</fastjson.version>
         <druid.vrsion>1.1.12</druid.vrsion>
         <poseidon.version>0.1.0.BUILD</poseidon.version>
+        <mysql.version>8.0.13</mysql.version>
+        <!--是否跳过测试用例-->
         <!--<skipTests>true</skipTests>-->
+        <!--logstash 指定logback版本-->
+        <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
     </properties>
     <dependencies>
 
@@ -87,7 +91,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.13</version>
+            <version>${mysql.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -120,6 +124,11 @@
             <dependency>
                 <groupId>com.muggle.poseidon</groupId>
                 <artifactId>poseidon-web-doc</artifactId>
+                <version>${poseidon.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.muggle.poseidon</groupId>
+                <artifactId>poseidon-request</artifactId>
                 <version>${poseidon.version}</version>
             </dependency>
         </dependencies>
