--- a/poseidon-center/pom.xml
+++ b/poseidon-center/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>poseidon-request</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.muggle</groupId>
+            <artifactId>poseidon-quartz</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
