--- a/poseidon-quartz/pom.xml
+++ b/poseidon-quartz/pom.xml
@@ -6,7 +6,22 @@
 
     <groupId>com.muggle</groupId>
     <artifactId>poseidon-quartz</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-
+    <version>0.1.0.BUILD</version>
+    <parent>
+        <groupId>com.muggle.poseidon</groupId>
+        <artifactId>poseidon-parent</artifactId>
+        <version> 0.1.0.BUILD</version>
+        <relativePath>../poseidon-parent/pom.xml</relativePath>
+        <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+    </parent>
+    <dependencies>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz-jobs</artifactId>
+        </dependency>
+    </dependencies>
 </project>
