--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /nbdist/
 /.nb-gradle/
 /poseidon-system/src/main/resources/static/resources/test.txt
+/poseidon-center/src/main/resources/application-local.properties
