--- a/poseidon-center/pom.xml
+++ b/poseidon-center/pom.xml
@@ -42,10 +42,10 @@
             <groupId>com.muggle.poseidon</groupId>
             <artifactId>poseidon-request</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.muggle</groupId>
             <artifactId>poseidon-quartz</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
