--- a/poseidon-core/pom.xml
+++ b/poseidon-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.muggle.poseidon</groupId>
         <artifactId>poseidon-parent</artifactId>
-        <version> 0.1.0.BUILD</version>
+        <version>0.1.0.BUILD</version>
         <relativePath>../poseidon-parent/pom.xml</relativePath>
         <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
@@ -26,6 +26,15 @@
             <artifactId>poseidon-common</artifactId>
         </dependency>
         <!--####-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
 
     </dependencies>
 
