--- a/poseidon-system/pom.xml
+++ b/poseidon-system/pom.xml
@@ -31,6 +31,15 @@
             <groupId>com.muggle.poseidon</groupId>
             <artifactId>poseidon-common</artifactId>
         </dependency>
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
     </dependencies>
 
