--- a/poseidon-quartz/pom.xml
+++ b/poseidon-quartz/pom.xml
@@ -23,5 +23,11 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz-jobs</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.1.6.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
