--- a/poseidon-system/pom.xml
+++ b/poseidon-system/pom.xml
@@ -31,6 +31,10 @@
             <groupId>com.muggle.poseidon</groupId>
             <artifactId>poseidon-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
 
     </dependencies>
 
