--- a/poseidon-parent/pom.xml
+++ b/poseidon-parent/pom.xml
@@ -115,10 +115,23 @@
             <artifactId>druid</artifactId>
             <version>${druid.vrsion}</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-            <version>2.0.0.RELEASE</version>
+            <artifactId>spring-cloud-starter-security</artifactId>
+            <exclusions>
+                &lt;!&ndash;旧版本 redis操作有问题&ndash;&gt;
+                <exclusion>
+                    <artifactId>spring-security-oauth2</artifactId>
+                    <groupId>org.springframework.security.oauth</groupId>
+                </exclusion>
+            </exclusions>
+            <version>2.1.2.RELEASE</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.3.RELEASE</version>
         </dependency>
     </dependencies>
 
