--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@
 /.nb-gradle/
 /poseidon-system/src/main/resources/static/resources/test.txt
 /poseidon-center/src/main/resources/application-local.properties
+/**/*.iml
+/**/targrt
+/**/test
+/**/mvnw
+/**/mvnw.cmd
+/**/*.mvn
+/**/*.log
+/**/out
