--- a/poseidon-center/src/main/resources/application.properties
+++ b/poseidon-center/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=local
+spring.profiles.active=dev
 admin.email=1977339740@qq.com
 poseidon.security.logout=/logout
 upload.file=F:/gbg
